name:                yesod-katip
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ivanbakel/yesod-katip#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          ivb@vanbakel.io
copyright:           2020 Isaac van Bakel
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.Katip
                     , Yesod.Katip.Orphans
  other-modules:       Yesod.Katip.Internal.Singletons
  build-depends:       base >= 4.7 && < 5
                     , yesod-core >= 1.0 && < 2
                     , katip >= 0.8 && < 0.9
                     , data-has >= 0.3 && < 0.4
                     , mtl >= 2 && < 3
                     , monad-logger >= 0.3 && < 0.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ivanbakel/yesod-katip
