cabal-version:       >=2.0
name:                yesod-katip
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ivanbakel/yesod-katip#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          ivb@vanbakel.io
copyright:           2020 Isaac van Bakel
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.Katip
                     , Yesod.Katip.Class
                     , Yesod.Katip.Orphans
  build-depends:       base >= 4.7 && < 5
                     , yesod-core ^>= 1.6
                     , ytl ^>= 0.1
                     , aeson >= 1 && < 2
                     , data-default ^>= 0.7
                     , katip ^>= 0.8
                     , monad-logger ^>= 0.3
                     , wai >= 3 && < 4
                     , wai-extra >= 3 && < 4
                     -- Required only by a polyfill, so whatever version gets
                     -- pulled in by the user's build system is probably fine
                     , case-insensitive
                     , http-types
                     , iproute
                     , network
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ivanbakel/yesod-katip
